--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ img {
 
 <footer class="footer">
 <div class="container">
-<p>&copy; 2024 Starbucks. All rights reserved.</p>
+<p>&copy; 2024 Starbucks. All rights reserved. For education purposes only.</p>
 </div>
 </footer>
 
