--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@ h3 {
 
 <footer class="footer">
 <div class="container">
-<p>&copy; 2024 Starbucks. All rights reserved.</p>
+<p>&copy; 2024 Starbucks. All rights reserved. For education purposes only.</p>
 </div>
 </footer>
 
