--- a/products.html
+++ b/products.html
@@ -239,7 +239,7 @@ h3 {
 
 <footer class="footer">
     <div class="container">
-    <p>© 2024 Starbucks Corporation. All rights reserved.</p>
+    <p>© 2024 Starbucks Corporation. All rights reserved. For education purposes only.</p>
     </div>
 </footer>
 
